--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online food delivery in City</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 865px)" href="css/phone.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" media="screen and (max-width: 865px)" href="./phone.css">
 </head>
 
 <body>
@@ -32,19 +32,19 @@
         <h1 class="headingprimary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="img/1.png" alt="">
+                <img src="./1.png" alt="">
                 <h2 class="h-secondary center">Food Catering</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel id beatae </p>
 
             </div>
             <div class="box">
-                <img src="img/2.png" alt="">
+                <img src="./2.png" alt="">
                 <h2 class="h-secondary center">Bulk Ordering</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel id </p>
 
             </div>
             <div class="box">
-                <img src="img/3.png" alt="">
+                <img src="./3.png" alt="">
                 <h2 class="h-secondary center">Food Ordering</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel id beatae illum ducimus
                     earum delectus
@@ -57,16 +57,16 @@
         <h1 class="headingprimary center">Our Cleints</h1>
         <div id="cleint-item">
             <div id="cleint">
-                <img src="img/logo1.png" alt="Our Cleint">
+                <img src="./logo1.png" alt="Our Cleint">
             </div>
             <div id="cleint">
-                <img src="img/logo2.png" alt="Our Cleint">
+                <img src="./logo2.png" alt="Our Cleint">
             </div>
             <div id="cleint">
-                <img src="img/logo3.png" alt="Our Cleint">
+                <img src="./logo3.png" alt="Our Cleint">
             </div>
             <div id="cleint">
-                <img src="img/logo4.png" alt="Our Cleint">
+                <img src="./logo4.png" alt="Our Cleint">
             </div>
         </div>
     </section>
