--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="logo.png" alt="My online meal">
+            <img src="download.png" alt="My online meal">
         </div>
         <ul>
             <li class="item"><a href="#">Home</a></li>
